# Ros_message

Face_Plate_msg/src/: CMakeLists.txt  package.xml
Face_Plate_msg/src/msg/: Face_compare.msg  Face_pic.msg  Illegal_stop_video.msg  Illegal_vehicle_pic.msg  Plate_pic.msg
Location/: release.sh
Location/src/: CMakeLists.txt  package.xml
Location/src/msg/: attribute.msg  location.msg  slam.msg
